--- a/2017/src/html/sponsors.ejs
+++ b/2017/src/html/sponsors.ejs
@@ -85,6 +85,14 @@ var page = {
             </li>
           </ul>
         </div>
+        <div class="prs-section">
+          <h3 class="prs-grade">Sticker</h3>
+          <ul class="prs-list -venue">
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'stickermule', grade: 'sticker' }) %>
+            </li>
+          </ul>
+        </div>
       </div>
 
     </div>
