Add Wizcorp Inc.

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -169,6 +169,9 @@ var page = {
         <li>
           <%- include('./_partial/sponsor', { id: 'gms', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'wizcorp', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
