--- a/2017/src/html/sponsors.ejs
+++ b/2017/src/html/sponsors.ejs
@@ -67,6 +67,9 @@ var page = {
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'gms', grade: 'silver' }) %>
             </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'wizcorp', grade: 'silver' }) %>
+            </li>
           </ul>
         </div>
         <div class="prs-section">
