--- a/2017/src/scss/main.scss
+++ b/2017/src/scss/main.scss
@@ -2269,22 +2269,12 @@ $hex-image: $hex-canvas * $hex-ratio;
       padding-left: 1rem;
       padding-right: 1rem;
     }
-    &.-silver {
+    &.-silver,
+    &.-bronze,
+    &.-venue {
       > * {
         flex: 0 0 33.3%;
         max-width: 33.3%;
-      }
-    }
-    &.-bronze {
-      > * {
-        flex: 0 0 25%;
-        max-width: 25%;
-      }
-    }
-    &.-venue {
-      > * {
-        flex: 0 0 25%;
-        max-width: 25%;
       }
     }
   }
