--- a/2017/src/html/schedule.ejs
+++ b/2017/src/html/schedule.ejs
@@ -26,6 +26,25 @@ var page = {
         </ul>
 
         <%- include('_partial/timetable-conference') -%>
+        <div class="schedule-subsection" id="afterparty">
+          <h3 class="schedule-subsectionHead">After Party</h3>
+          <div class="schedule-subsectionText">
+            <p>11/25(土)の夜は、freee様のオフィスでパーティを開催します。<br/>
+              豪華なディナーを楽しみつつ、プログラミングやWeb技術を用いたライブ演奏やDJパフォーマンスをご覧になれます。<br/>
+              ぜひご参加ください！</p>
+            <dl>
+              <dt>会場:</dt>
+              <dd>freee株式会社 (東京都品川区西五反田2-8-1 五反田ファーストビル 9F)</dd>
+              <dt>時刻:</dt>
+              <dd>20:00 〜 23:00</dd>
+              <dt>出演:</dt>
+              <dd>ライブ&DJ: Kentaro Okuno / g200kg / らぞーな / サスカッチ / polamjag & VJ: tanitta / stefafafan & VJ: amagitakayosi</dd>
+            </dl>
+            <p>パーティ会場への移動に貸切バスを用意しています。<br/>
+              Closing Talkの終了次第バスの搭乗を開始しますので、スタッフの案内に従って移動してください。<br/>
+              （バスの席数には限りがあるため、人数が多い場合は乗車できない場合があります）</p>
+          </div>
+        </div>
 
       </div>
 
