--- a/2017/src/html/schedule.ejs
+++ b/2017/src/html/schedule.ejs
@@ -30,7 +30,7 @@ var page = {
           <h3 class="schedule-subsectionHead">After Party</h3>
           <div class="schedule-subsectionText">
             <p>11/25(土)の夜は、freee様のオフィスでパーティを開催します。<br/>
-              豪華なディナーを楽しみつつ、プログラミングやWeb技術を用いたライブ演奏やDJパフォーマンスをご覧になれます。<br/>
+              豪華なディナーを楽しみつつ、プログラミングやWeb技術を用いたライブ演奏、DJパフォーマンスをご覧になれます。<br/>
               ぜひご参加ください！</p>
             <dl>
               <dt>会場:</dt>
@@ -38,7 +38,7 @@ var page = {
               <dt>時刻:</dt>
               <dd>20:00 〜 23:00</dd>
               <dt>出演:</dt>
-              <dd>ライブ&DJ: g200kg / らぞーな / サスカッチ / polamjag & VJ: tanitta / stefafafan & VJ: amagitakayosi</dd>
+              <dd>g200kg / らぞーな / サスカッチ & sugai / polamjag / tanitta / stefafafan / amagitakayosi</dd>
             </dl>
             <p>パーティ会場への移動に貸切バスを用意しています。<br/>
               Closing Talkの終了次第バスの搭乗を開始しますので、スタッフの案内に従って移動してください。<br/>
