Add workshop schedule

--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -59,11 +59,10 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionTitle">Angular2+ Authentication Tutorial with Auth0</p>
+        <p class="timetable-sessionSpeaker">Hideya Furuta from Auth0</p>
       </div>
     </div>
   </div>
@@ -75,7 +74,6 @@ var overlaySpeakers = [
     <div class="timetable-content">
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Lunch!!</p>
-        <p class="timetable-sessionSpeaker"></p>
       </div>
     </div>
   </div>
@@ -93,11 +91,10 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionTitle">LINE Bot Handson</p>
+        <p class="timetable-sessionSpeaker">n0bisuke</p>
       </div>
     </div>
   </div>
@@ -115,11 +112,10 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionTitle">LINE Bot Handson</p>
+        <p class="timetable-sessionSpeaker">by n0bisuke</p>
       </div>
     </div>
   </div>
@@ -137,11 +133,10 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionSpeaker">TBA</p>
       </div>
     </div>
   </div>
@@ -159,11 +154,11 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionSpeaker">TBA</p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionSpeaker">TBA</p>
       </div>
     </div>
   </div>
