--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -97,6 +97,7 @@ var page = {
         <div class="home-scheduleNote">
           <p>※ セッションの内容／時間は変更になる可能性があります。</p>
           <p>※ セッションは日本語・英語で行われます。</p>
+          <p>※ 26日のNode School, Workshopにはご自身のマシンをご用意ください。</p>
         </div>
 
       </div>
