--- a/2017/src/html/schedule.ejs
+++ b/2017/src/html/schedule.ejs
@@ -64,6 +64,7 @@ var page = {
       <div class="schedule-note">
         <p>※ セッションの内容／時間は変更になる可能性があります。</p>
         <p>※ セッションは日本語・英語で行われます。</p>
+        <p>※ 26日のNode School, Workshopにはご自身のマシンをご用意ください。</p>
       </div>
     </div>
 
