Replace width CSS Filter

--- a/2017/src/html/_partial/speaker.ejs
+++ b/2017/src/html/_partial/speaker.ejs
@@ -7,7 +7,7 @@ var session = sessions[id];
     <div class="Hex">
       <div class="Hex-outer">
         <div class="Hex-inner">
-          <img src="img/speakers/pic-<%= id %>-mono.jpg" class="Hex-image">
+          <img src="img/speakers/pic-<%= id %>.jpg" class="Hex-image">
         </div>
       </div>
     </div>
