Fix typo of a name

--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -189,7 +189,7 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Data Visualization Workshop</p>
-        <p class="timetable-sessionSpeaker">Shriley Wu</p>
+        <p class="timetable-sessionSpeaker">Shirley Wu</p>
       </div>
     </div>
   </div>
