Replace chris with yosuke

--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -12,7 +12,7 @@ var overlaySpeakers = [
   'kosamari',
   'leko',
   'sia',
-  'chris',
+  'yosuke',
   'sota',
   'rob',
   'gil',
@@ -183,9 +183,9 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <a data-key="chris" class="speaker">
-          <p class="timetable-sessionTitle">Building on Bitcoin with Bcoin and Node.js</p>
-          <p class="timetable-sessionSpeaker">Christopher "JJ" Jeffrey</p>
+        <a data-key="yosuke" class="speaker">
+          <p class="timetable-sessionTitle">Turbo Boost Next Node.js</p>
+          <p class="timetable-sessionSpeaker">Yosuke Furukawa</p>
         </a>
       </div>
       <div class="timetable-session">
