--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -24,10 +24,17 @@ var overlaySpeakers = [
 <%- include('../_partial/speaker-overlay', { id: speaker }) -%>
 <% }); %>
 <div class="timetable -conference">
+
   <div class="timetable-caption">
     <h3 class="timetable-title">
       Nov 25 <span class="timetable-venue">at Fujimi Gate Hosei University</span>
     </h3>
+  </div>
+
+  <div class="timetable-notice">
+    <p>
+      25日に登壇予定の Christopher 'JJ' Jeffrey がキャンセルとなりました。代替として、Yosuke Furukawa によるセッションに変更いたします。
+    </p>
   </div>
   <div class="timetable-header">
     <div class="timetable-time"></div>
