Add notice to session item

--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -194,6 +194,11 @@ var overlaySpeakers = [
           <p class="timetable-sessionTitle">Turbo Boost Next Node.js</p>
           <p class="timetable-sessionSpeaker">Yosuke Furukawa</p>
         </a>
+        <div class="timetable-sessionNotice">
+          <p>
+            予定していたChristopher 'JJ' Jeffrey のセッションはキャンセルとなりました。
+          </p>
+        </div>
       </div>
       <div class="timetable-session">
         <a data-key="sota" class="speaker">
