Update TBA sessions

--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -135,8 +135,8 @@ var overlaySpeakers = [
         <p class="timetable-sessionTitle">NodeSchool</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">TBA</p>
+        <p class="timetable-sessionTitle">LINE Bot Handson</p>
+        <p class="timetable-sessionSpeaker">by n0bisuke</p>
       </div>
     </div>
   </div>
@@ -154,11 +154,10 @@ var overlaySpeakers = [
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">TBA</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">TBA</p>
+        <p class="timetable-sessionTitle">LINE Bot Handson</p>
+        <p class="timetable-sessionSpeaker">by n0bisuke</p>
       </div>
     </div>
   </div>
