--- a/2018/src/html/coc.ejs
+++ b/2018/src/html/coc.ejs
@@ -7,7 +7,11 @@ var page = {
 
 <%- include('_partial/svg') -%>
 
-<%- include('_partial/navigation') -%>
+<header id="header" class="header">
+  <div class="header-inner">
+    <a href="./" class="header-logo"><img src="img/logo-tnf-invert.svg" alt="東京Node学園祭2018"></a>
+  </div>
+</header>
 
 <div class="main">
 
