--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -29,6 +29,15 @@
 
   <div class="main home-main">
 
+    <div class="home-venues">
+      <h2 class="home-subhead">Venue</h2>
+      <div class="page-body venue-body">
+        <%- include('_partial/venue-map') -%>
+      </div>
+    </div>
+
+  </div>
+
   </div>
 
 </div>
