--- a/2018/src/html/_partial/venue-map.ejs
+++ b/2018/src/html/_partial/venue-map.ejs
@@ -3,7 +3,7 @@
   <div class="venue-detail">
     <section class="venue-access u-tac">
       <h3 class="venue-name">
-        <img src="img/pin-interactive.png" class="venue-icon">
+        <img src="img/pin-conference.png" class="venue-icon">
         ヤフー株式会社 / Yahoo Japan Corporation
       </h3>
       <p class="venue-address">
