Add speaker module for TOP

--- a/2018/src/html/_partial/speaker.ejs
+++ b/2018/src/html/_partial/speaker.ejs
@@ -16,8 +16,10 @@ var session = sessions[id];
     <p class="speaker-name">
       <%= speaker.name %>
     </p>
+    <% if (session) { %>
     <p class="speaker-session">
       <%= session.title %>
     </p>
+    <% } %>
   </div>
 </a>
