--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -1,12 +1,6 @@
 <%
 var page = {
-  speakers: [
-    'anna',
-    'rachel',
-    'daniel',
-    'fedor',
-    'shuhei',
-  ]
+  speakers: Object.keys(speakers)
 }
 %>
 <%- include('_layout/header') -%>
