Fix featured speakers

--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -1,6 +1,12 @@
 <%
 var page = {
-  speakers: Object.keys(speakers)
+  speakers: [
+    'addaleax',
+    'ohhoe',
+    'littledan',
+    'indutny',
+    'tushuhei',
+  ]
 }
 %>
 <%- include('_layout/header') -%>
