--- a/2018/src/html/_partial/speaker-overlay.ejs
+++ b/2018/src/html/_partial/speaker-overlay.ejs
@@ -1,6 +1,5 @@
 <%
-  var speaker = speakers[id];
-  var session = sessions[id];
+  var speaker = speakers[id] || {};
   var _enableBr = function(str) { return str.replace(/\n/g, '<br>'); };
 %>
 <div class="overlay" data-key="<%= id %>">
@@ -15,22 +14,9 @@
         <div class="session-speakerAvatar" style="background-image:url(img/speakers/pic-<%= id %>.jpg);"></div>
         <div class="session-speakerProfile">
           <p class="session-speakerName"><%= speaker.name %></p>
-          <%-
-          if (speaker.biography) {
-            %>
-            <div class="session-speakerBio" lang="en">
-              <p><%- _enableBr(speaker.biography) %></p>
-            </div>
-            <%-
-          }
-          if (speaker['自己紹介']) {
-            %>
-            <div class="session-speakerBio" lang="ja">
-              <p><%- _enableBr(speaker['自己紹介']) %></p>
-            </div>
-            <%-
-          }
-          %>
+          <div class="session-speakerBio">
+            <p><%- _enableBr(speaker.biography || speaker['自己紹介']) %></p>
+          </div>
           <ul class="session-speakerLinks">
             <% if (speaker.twitter) { %>
             <li>
@@ -47,14 +33,6 @@
             </li>
             <% } %>
           </ul>
-        </div>
-      </div>
-
-      <div class="session-content">
-        <p class="session-time"><%= session.day %>, <%= session.time %> <%= session.room %></p>
-        <h2 class="session-title"><%= session.title %></h2>
-        <div class="session-summary">
-          <p><%- _enableBr(session.summary) %></p>
         </div>
       </div>
     </div>
