--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -17,6 +17,22 @@ var page = {
 
   <div class="cover">
 
+    <header class="header cover-header">
+      <nav class="navigation">
+        <ul class="navigation-list cover-navigationList">
+          <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
+          <li><a href="venues.html" class="navigation-target">Venues</a></li>
+          <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
+        </ul>
+        <button class="navigation-button">
+          <svg xmlns="http://www.w3.org/2000/svg" class="navigation-icon"><use xlink:href="#close"></use></svg>
+        </button>
+      </nav>
+      <button class="header-button">
+        <svg xmlns="http://www.w3.org/2000/svg" class="header-icon"><use xlink:href="#nav"></use></svg>
+      </button>
+    </header>
+
     <div class="cover-inner">
 
       <img src="img/logo-tnf-invert.svg" class="cover-logo">
