--- a/2018/src/scss/main.scss
+++ b/2018/src/scss/main.scss
@@ -2304,6 +2304,7 @@ $hex-image: $hex-canvas * $hex-ratio;
 
 .sponsor {
   text-align: center;
+  background-color: #FFFFFF;
 }
 .sponsor-name {
 }
