First version of the new schedule.

--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -21,8 +21,8 @@ var page = {
       <nav class="navigation">
         <ul class="navigation-list cover-navigationList">
           <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
-          <li><a href="#schedules" class="navigation-target">Schedules</a></li>
-          <li><a href="venues.html" class="navigation-target">Venues</a></li>
+          <li><a href="venues.html" class="navigation-target">Venue</a></li>
+          <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
           <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
         </ul>
         <button class="navigation-button">
@@ -61,10 +61,9 @@ var page = {
       <h2 class="home-subhead">Featured Speakers</h2>
 
       <ul class="speakers-list">
-        <% page.speakers.forEach(function(speaker) { %>
+        <% page.speakers.forEach(function(id) { %>
         <li>
-          <%- include('_partial/speaker', { id: speaker }) -%>
-          <%- include('_partial/speaker-overlay', { id: speaker }) -%>
+          <%- include('_partial/speaker', { id }) -%>
         </li>
         <% }); %>
       </ul>
