--- a/2018/src/html/_partial/speaker.ejs
+++ b/2018/src/html/_partial/speaker.ejs
@@ -1,7 +1,21 @@
 <%
 var speaker = speakers[id];
+var entries = Object.values(calendar).reduce((entries, cal) => {
+  for (const room in cal.rooms) {
+    for (const entry of cal.rooms[room]) {
+      if (isSpeakerForEntry(entry, speaker)) {
+        entries.push({
+          data: entry,
+          timeZone: cal.googleObject.timeZone,
+          room
+        })
+      }
+    }
+  }
+  return entries
+}, []);
 %>
-<a class="speaker" data-key="<%= id %>">
+<a class="speaker" href="#speaker-<%= id %>">
   <div class="speaker-image">
     <div class="Hex">
       <div class="Hex-outer">
@@ -15,5 +29,13 @@ var speaker = speakers[id];
     <p class="speaker-name">
       <%= speaker.name %>
     </p>
+    <p class="speaker-session">
+      <%- entries.map(entry => entry.data.summary).join('<br/>') %>
+    </p>
   </div>
 </a>
+<%- include('speaker-overlay', {
+  entries,
+  speaker,
+  overlayId: `speaker-${id}`
+}) -%>
