--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -63,7 +63,7 @@ var page = {
       <ul class="speakers-list">
         <% page.speakers.forEach(function(id) { %>
         <li>
-          <%- include('_partial/speaker', { id }) -%>
+          <%- include('_partial/speaker', { id, link: true }) -%>
         </li>
         <% }); %>
       </ul>
