--- a/2018/src/html/_partial/navigation.ejs
+++ b/2018/src/html/_partial/navigation.ejs
@@ -4,6 +4,7 @@
     <nav class="navigation">
       <ul class="navigation-list">
         <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
+        <li><a href="schedules.html" class="navigation-target">Schedules</a></li>
         <li><a href="venues.html" class="navigation-target">Venues</a></li>
         <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
       </ul>
