--- a/2018/src/html/_partial/timetable-conference.ejs
+++ b/2018/src/html/_partial/timetable-conference.ejs
@@ -2,13 +2,13 @@
 
   <div class="timetable-caption">
     <h3 class="timetable-title">
-      Nov 25 <span class="timetable-venue">at Fujimi Gate Hosei University</span>
+      Day 1 <span class="timetable-venue">at Nov 23th</span>
     </h3>
   </div>
 
   <div class="timetable-notice">
     <p>
-      25日に登壇予定の Christopher 'JJ' Jeffrey がキャンセルとなりました。代替として、Yosuke Furukawa によるセッションに変更いたします。
+      <!-- 25日に登壇予定の Christopher 'JJ' Jeffrey がキャンセルとなりました。代替として、Yosuke Furukawa によるセッションに変更いたします。 -->
     </p>
   </div>
   <div class="timetable-header">
@@ -169,11 +169,6 @@
           <p class="timetable-sessionTitle">Turbo Boost Next Node.js</p>
           <p class="timetable-sessionSpeaker">Yosuke Furukawa</p>
         </a>
-        <div class="timetable-sessionNotice">
-          <p>
-            予定していたChristopher 'JJ' Jeffrey のセッションはキャンセルとなりました。
-          </p>
-        </div>
       </div>
       <div class="timetable-session">
         <a data-key="sota" class="speaker">
