--- a/2018/src/html/_partial/timetable-interactive.ejs
+++ b/2018/src/html/_partial/timetable-interactive.ejs
@@ -1,7 +1,7 @@
 <div class="timetable -workshop">
   <div class="timetable-caption">
     <h3 class="timetable-title">
-      Nov 26 <span class="timetable-venue">at Recruit Technologies</span>
+      Day 2 <span class="timetable-venue">at Nov 24th</span>
     </h3>
   </div>
   <div class="timetable-header">
